# kroma

./: .gitignore  args.dev.gn  args.release.gn  features.md  package.json  patcher.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.agents/skills/apply-patches/: SKILL.md
.github/: copilot-instructions.md
chromium/: .gclient
docs/: GIT_SHALLOW.md
patcher/: go.mod  go.sum  main.go
patcher/commands/: pull.go  push.go  submodules.go
patcher/models/: patch.go
patcher/store/: app.go  store.go
patches/base/version_info/: version_info.cc.diff  version_info.h.diff
patches/chrome/: BUILD.gn.diff
patches/chrome/app/: BUILD.gn.diff  chrome_command_ids.h.diff  chrome_dll.rc.diff  chrome_exe.rc.diff  settings_chromium_strings.grdp.diff  settings_strings.grdp.diff
patches/chrome/browser/: BUILD.gn.diff  app_controller_mac.mm.diff  browser_features.cc.diff  browser_process_impl.cc.diff  browser_process_impl.h.diff  chrome_browser_interface_binders.cc.diff  chrome_browser_interface_binders_webui.cc.diff  chrome_browser_main.cc.diff  chrome_content_browser_client.cc.diff  chrome_content_browser_client_navigation_throttles.cc.diff  flag_descriptions.cc.diff  flag_descriptions.h.diff  intranet_redirect_detector.cc.diff  shell_integration_win.cc.diff
patches/chrome/common/: BUILD.gn.diff  chrome_switches.cc.diff  chrome_switches.h.diff  crash_keys.cc.diff  features.gni.diff  google_url_loader_throttle.cc.diff  logging_chrome.cc.diff  webui_url_constants.cc.diff
patches/chrome/elevation_service/: BUILD.gn.diff  elevation_service_delegate.cc.diff
patches/chrome/renderer/: BUILD.gn.diff  chrome_content_renderer_client.cc.diff  chrome_render_frame_observer.cc.diff
patches/chrome/test/: BUILD.gn.diff
patches/chrome/updater/: configurator.cc.diff
patches/chrome/utility/: BUILD.gn.diff  services.cc.diff
patches/components/: BUILD.gn.diff
patches/components/assist_ranker/: ranker_url_fetcher.cc.diff
patches/components/browser_sync/: BUILD.gn.diff
patches/components/domain_reliability/: BUILD.gn.diff  bake_in_configs.py.diff  google_configs.cc.diff  uploader.cc.diff
patches/components/embedder_support/: switches.cc.diff  switches.h.diff  user_agent_utils.cc.diff  (+1 more)
patches/net/: BUILD.gn.diff
patches/url/: url_constants.h.diff  url_util.cc.diff
tests/: canvas-fingerprint.test.ts  example.test.ts  javascript.test.ts  keyboard.test.ts  mouse.test.ts  webgpu.test.ts  webrtc.test.ts
(+561 files in other folders)
