# Set build arguments here. See `gn help buildargs`.
is_debug = true
is_component_build=true

use_thin_lto = false

symbol_level = 0
blink_symbol_level=0
v8_symbol_level=0

enable_vr = false
enable_background_mode = false
enable_bound_session_credentials = true
enable_openscreen_protocol = false

build_with_tflite_lib=true
clang_use_chrome_plugins=false
disable_fieldtrial_testing_config=true
enable_hangout_services_extension=false
enable_mdns=true
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_widevine=true
exclude_unwind_tables=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
safe_browsing_mode=1
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false

use_rtti = false

enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
use_lld = true
proprietary_codecs=true
target_cpu="x64"
target_os="win"
use_sysroot=false
dcheck_always_on=false
enable_rust=true
enable_mse_mpeg2ts_stream_parser=true
cc_wrapper = "sccache"
branding_file_path="//chrome/app/theme/chromium/BRANDING"

# Toolchain is auto-detected via build/win_toolchain.json (DEPOT_TOOLS_WIN_TOOLCHAIN=1)

kroma_enabled = true
